--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
-    "karma-jasmine": "^0.3.5"
+    "karma-jasmine": "^0.3.5",
+    "promises-aplus-tests": "^2.1.0"
   }
 }
