--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "yapi.js",
+  "name": "yapi",
   "version": "0.0.1",
   "description": "yet another Promise/A+ implementation",
-  "main": "./lib/yapi.js",
+  "main": "dist/yapi.min.js",
   "scripts": {
+    "build": "grunt build",
     "test": "promises-aplus-tests test/spec-adapter"
   },
   "keywords": [
@@ -22,7 +23,11 @@
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
-    "promises-aplus-tests": "^2.1.0"
+    "promises-aplus-tests": "^2.1.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "bugs": {
     "url": "https://github.com/loveky/yapi.js/issues"
