--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "karma-chrome-launcher": "^0.1.7"
   },
   "bugs": {
     "url": "https://github.com/loveky/yapi.js/issues"
